package edu.fiuba.algo3.modelo.seniority;

public interface ISeniority {

    public int recuperarEnergia();

    public void actualizar();
}
